--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <title>Proyecto M1</title>
 </head>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=Caveat:wght@400..700&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Major+Mono+Display&display=swap" rel="stylesheet">
+
 <body>
-    <h1>Proyecto M1</h1>
+    <div class="gradient-background">
+        <div class="container1">
+        <img class="flecha" src="assets/icon-no-background.svg" alt="flecha" height="90px">
+        <h1 class="h1">Tamara Silva</h1>
+        </div>
+        <div class="seccion">
+            <h2 class="h2">Sobre mí</h2><br>
+            <p class="p">Bienvenidos a mi sitio! Soy Tami, estudiante de Full Stack Web Dev en Henry. Algunos datos sobre mí: soy Economista y Magister en Finanzas; trabajé durante 12 años en multinacionales de distintos rubros, siempre en el área de Finanzas.<br>Las ganas de hacer algo distinto surgieron en la pandemia pero se profundizaron desde la llegada de mi primer bebé, Juani. Así que aquí estoy! Lista para aprender y descubrir el mundo de la Programación.</p>
+        </div>
+        <div class="seccion">
+            <h2 class="h2">Mis tecnologías favoritas</h2>
+                <div class="container2">
+                <div class="icono">
+                    <img src="assets/filetype-html.svg" alt="ícono HTML" height="200px">
+                </div>
+                <div class="icono">
+                    <img src="assets/filetype-css.svg" alt="ícono CSS" height="200px">
+                </div>
+                <div class="icono">
+                    <img src="assets/filetype-js.svg" alt="ícono Javascript" height="200px">
+                </div>
+                </div>
+        </div>
+        <div class="seccion">
+            <h2 class="h2">Mis actividades favoritas</h2>
+        </div>
+    </div>
 </body>
 </html>
