--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </section>    
     </main>
 
+    <script src="scripts/models.js"></script>
     <script src="scripts/index.js"></script>
 
 </body>
